Started to simplify Rezolve

--- a/rezolve.html
+++ b/rezolve.html
@@ -44,6 +44,16 @@
 				a.appendChild(r);
 			})(window,document,'//static.hotjar.com/c/hotjar-','.js?sv=');
 
+
+
+
+
+
+
+
+
+
+
     </script>
 
     <!-- FullStory Tracking Code for http://berdilaovidiu.github.io/portfolio/ -->
@@ -71,6 +81,16 @@
                 g._v="1.3.0";
             })(window,document,window['_fs_namespace'],'script','user');
 
+
+
+
+
+
+
+
+
+
+
     </script>
 
 </head>
@@ -86,6 +106,16 @@
             ga('create', 'UA-65113069-1', 'auto');
             ga('send', 'pageview');
 
+
+
+
+
+
+
+
+
+
+
 </script>
 
 <script type="text/javascript">
@@ -98,6 +128,16 @@
                     initTopMenuActions("body_panel");
                 });
             });
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -174,109 +214,25 @@
             </li>
         </ul>
 
-        <div id="showcase" class="subtitle">Reimagining the instant buy experience</div>
+        <div id="showcase" class="subtitle">RXP Overhaul</div>
 
         <p>
-            The challenge was to design a mobile e-commerce product description page with an exciting instant purchase
-            experience. This allows buying a product without leaving the product page and going to a standard
-            e-commerce cart. The flow is optimised for the returning customer who has already expressed delivery and
-            payment preferences and makes it also fun for a first time user who needs to input this data.
+            The Rezolve Experience Platform (RXP) is a web application that allows merchants to create promotional
+            content. This content can take the form of mobile landing pages, lead generation forms, and purchasable
+            products. Merchants can then promote their content via mobile, web, or physical experiences.
         </p>
 
-        <div id="wizard" class="subtitle2">The accordion</div>
-        <p>The first time user goes through three clearly separated steps in order to complete the purchase, without
-            leaving the product page.</p>
         <p>
-            The returning user is only asked to select the product options, while the rest of the sections are
-            collapsed, but still show a summary. By tapping on the collapsed steps, the user is able to update her
-            preferences.
+            I joined the company right when RXP was undergoing a redesign. The old design lacked extensibility and had
+            poor responsiveness. Furthermore, it looked outdated.
         </p>
-        <div class="gallery">
-            <a data-fancybox="wizard"
-               data-caption="The first time user experience"
-               href="img/rezolve/rezolve-ib-new.png">
-                <img class="gallery1" src="img/rezolve/rezolve-ib-new.png"/>
-            </a>
-        </div>
-
-
-        <div id="overlay" class="subtitle2">The overlay</div>
         <p>
-            This is a more conventional approach, with the purchasing mechanism displayed on demand, as a bottom sheet.
-            Both of these early explorations ended up shaping the solutions released for web and mobile.
-        </p>
-        <div class="gallery">
-            <a data-fancybox="overlay"
-               data-caption="The overlay approach - multiple colour schemes"
-               href="img/rezolve/rezolve-ib-overlay1.png">
-                <img class="gallery2 left_image" src="img/rezolve/rezolve-ib-overlay1.png"/>
-            </a>
-            <a data-fancybox="overlay"
-               data-caption="The overlay approach - multiple colour schemes"
-               href="img/rezolve/rezolve-ib-overlay2.png">
-                <img class="gallery2 right_image" src="img/rezolve/rezolve-ib-overlay2.png"/>
-            </a>
-        </div>
-
-        <div id="redesign" class="subtitle">A fresh new design</div>
-        <p>The Rezolve Experience Portal (RXP) is a dashboard used by merchants to create and publish mobile
-            engagements. When I joined the company, RXP was being redesigned in order to incorporate new capabilities,
-            some large pieces of functionality from a recently acquired company.
+            In less than three months, I coordinated and contributed to a complete redesign. We started with a thorough
+            usability audit and addressed the most important issues based on severity and frequency. The end result was
+            a fresh and user-friendly design that was highly mobile-friendly and modular, all based on a well documented
+            design system.
         </p>
 
-        <div class="subtitle2">Existing situation</div>
-        <p>The production version had a lot of usability issues, especially on smaller devices, and an inconsistent and
-            outdated look and feel. There was already a set of improved designs, including the new functionality, but
-            those were only addressing some of the aesthetic issues, while introducing more complexity.
-        </p>
-
-        <div class="gallery">
-            <a data-fancybox="rxp-before" class="needsBorder"
-               data-caption="The overlay approach - multiple colour schemes"
-               href="img/rezolve/engagement-target-old.png">
-                <img class="gallery1  with_border" src="img/rezolve/engagement-target-old.png"/>
-            </a>
-        </div>
-
-        <p>A thorough UX audit of the existing situation brought to light some severe issues:</p>
-
-        <ul class="article_list">
-            <li>Lack of a pattern for selecting an existing entity vs creating a new one. This situation was quite
-                frequent during campaign creation and applied to entities like: locations, beacons, watermarked assets,
-                landing pages and lead generation forms.
-            </li>
-
-            <li>Poor new user experience. The app is based on specific mental model that was not clearly communicated.
-                The empty states were not informative. The new user had to put in a lot of effort before seeing a
-                benefit.
-            </li>
-
-            <li>Critical responsiveness issues. Central flows like the engagement creation and content creation provided
-                a poor experience on mobile.
-            </li>
-
-            <li>Outdated aesthetics. Aesthetics and attention to details play a huge role in creating trust.
-            </li>
-        </ul>
-
-
-        <div class="subtitle2">Improved solution</div>
-
-        <p>The redesign started with addressing the above mentioned issues and continued with others that were
-            discovered when looking at the flows in more depth.
-        </p>
-        <ul class="article_list">
-            <li>Solid pattern for adding new entities. It works the same as a standalone flow or when spawned from a
-                more complex flow, like creating an engagement. The side overlay on large screens works as a full screen
-                dialog on small screens, consistent with the short duration of the operation.
-            </li>
-            <li>Vertical layout for the engagement creation wizard progress indicator. Better visual separation and more
-                adaptable to different screen sizes.
-            </li>
-            <li>Cleaner and friendlier visuals. We introduced a contrasting accent colour, fun illustrations, reduced
-                the visual clutter and increased negative space.
-            </li>
-        </ul>
 
         <div class="gallery">
 
@@ -284,24 +240,6 @@
                data-caption="To be added"
                href="img/rezolve/Engagements-listing-large.png">
                 <img class="gallery1 with_border " src="img/rezolve/Engagements-listing-large.png"/>
-            </a>
-
-            <a data-fancybox="rxp-redesign" class="needsBorder"
-               data-caption="To be added"
-               href="img/rezolve/Engagement screeen.png">
-                <img class="gallery1  with_border" src="img/rezolve/Engagement screeen.png"/>
-            </a>
-
-            <a data-fancybox="rxp-redesign" class="needsBorder"
-               data-caption="Location based engagement creation"
-               href="img/rezolve/engagement-target-redesign.png">
-                <img class="gallery1 with_border" src="img/rezolve/engagement-target-redesign.png"/>
-            </a>
-
-            <a data-fancybox="rxp-redesign" class="needsBorder"
-               data-caption="Location baased engagement creation"
-               href="img/rezolve/engagement-target-new-redesign.png">
-                <img class="gallery1 with_border" src="img/rezolve/engagement-target-new-redesign.png"/>
             </a>
 
             <a data-fancybox="rxp-redesign" class="needsBorder"
@@ -325,9 +263,173 @@
 
         </div>
 
-        <div class="subtitle">More to come soon</div>
-        <p>I am currently working on adding more interesting content to this project. Until then, please feel free to
-            reach out and ask for more. There are a ton of fun things I have worked on recently.
+        <p>
+            Unfortunately, the redesign did not come to fruition due to a sudden change in the company's focus and
+            priorities. Despite this setback, we didn't let our efforts go to waste. Instead, we used our findings from
+            the usability audit to identify lower-effort solutions that could be iteratively implemented in the live
+            version of the product. By doing so, we were able to make incremental improvements to the platform without
+            the need for a full redesign.
+        </p>
+
+        <div class="subtitle">RXP Refresh</div>
+        <p>Due to our limited budget and resources, we focused on implementing small, incremental changes that would
+            improve the overall user experience. While enhancing the aesthetics of our platform was one of our goals, we
+            recognized that consistency, visual hierarchy, and informative empty states were critical factors in
+            addressing usability issues.
+        </p>
+
+        <div class="gallery">
+            <a data-fancybox="rxp-refresh" class="needsBorder"
+               data-caption="To be added"
+               href="img/rezolve/RXP refresh - triggers.png">
+                <img class="gallery1 with_border" src="img/rezolve/RXP refresh - triggers.png"/>
+            </a>
+
+            <a data-fancybox="rxp-refresh" class="needsBorder"
+               data-caption="To be added"
+               href="img/rezolve/RXP refresh - targets.png">
+                <img class="gallery1 with_border" src="img/rezolve/RXP refresh - targets.png"/>
+            </a>
+
+            <a data-fancybox="rxp-refresh"
+               data-caption="To be added"
+               href="img/rezolve/RXP refresh - mobile.png">
+                <img class="gallery1" src="img/rezolve/RXP refresh - mobile.png"/>
+            </a>
+        </div>
+
+        <p>Taking a baby steps approach was essential to the success of our project. We began by updating basic design
+            elements such as typography, buttons, and navigation bars. Gradually, we tackled more complex features like
+            replacing the grids and file uploaders, and eventually overhauled the content and campaign creation flows.
+            Along the way, we developed a comprehensive design system that ensures consistency and reusability for
+            future updates.
+        </p>
+
+        <div class="subtitle">New RXP Features</div>
+        <p>
+            In addition to working on our long-term refresh project, we also dedicated resources to implementing new
+            features. Some of these features, such as analytics, were requested by our Product Team, while others were
+            identified and promoted by our design team to align with our business goals.
+        </p>
+
+        <div class="subtitle2">Analytics</div>
+        <p>
+            During the ideation phase of our analytics feature, we made several breakthroughs, but the most significant
+            one was shifting our primary focus from campaigns (referred to as engagements within the product) to content
+            pages (called target pages in the product). We realized that while campaigns were central to the engineer's
+            mental model, merchants primarily evaluate how their content is performing.
+        </p>
+        <p>
+            With this insight, we were able to design a comprehensive solution that enabled merchants of all sizes to
+            answer critical questions and optimize their ROI. While our initial data collection was limited, we released
+            a simplified first version and worked closely with the PMs to file improvement requests to gather the
+            necessary data for a more complete solution.
+        </p>
+
+        <div class="gallery">
+            <a data-fancybox="rxp-analytics" class="needsBorder"
+               data-caption="To be added"
+               href="img/rezolve/RXP refresh - analytics.png">
+                <img class="gallery1 with_border" src="img/rezolve/RXP refresh - analytics.png"/>
+            </a>
+        </div>
+
+        <div class="subtitle2">Onboarding</div>
+        <p>
+            Before merchants can start selling with Rezolve, they must configure several settings, including business
+            details, payment collection, inventory, delivery, physical locations, and more. This process involves
+            synchronizing with multiple systems, each with different response rates, which makes designing a self-serve
+            onboarder quite challenging. While the initial version was functional, it required constant supervision and
+            was not ready for independent use.
+        </p>
+        <p>
+            To address these issues, we revised the design to expose a more accurate mental model, setting the right
+            expectations and helping users understand the process better. We simplified the process by eliminating any
+            unnecessary configurations, progressively disclosing related settings, and using wording and visuals to
+            acknowledge and manage user emotions.
+        </p>
+        <div class="gallery">
+            <a data-fancybox="rxp-builder" class="needsBorder"
+               data-caption="To be added"
+               href="img/rezolve/RXP refresh - seow.png">
+                <img class="gallery1 with_border" src="img/rezolve/RXP refresh - seow.png"/>
+            </a>
+        </div>
+        <p>
+            After several iterations based on internal and external feedback, the final design performed exceptionally
+            well in user testing, with all subjects completing the flow with ease.
+        </p>
+
+        <div class="subtitle2">Content creation</div>
+        <p>
+            Small merchants faced difficulties coming up with content that looked good and performed well when faced
+            with a black canvas. We collected solid evidence from production data and user testing to convince
+            management that this was a problem worth solving.
+        </p>
+        <p>
+            To address this issue, we focused on low-hanging fruit, such as improving the empty state of the editor,
+            enhancing editor usability, and providing generic templates that would suit the small merchant persona.
+            While a more comprehensive solution that included easier and consistent brand implementation was considered,
+            we decided to shelve it as part of our regular practice of prioritizing fast-paced development and measuring
+            results rather than spending months polishing new features.
+        </p>
+        <div class="gallery">
+            <a data-fancybox="rxp-builder" class="needsBorder"
+               data-caption="To be added"
+               href="img/rezolve/RXP refresh - page builder.png">
+                <img class="gallery1 with_border" src="img/rezolve/RXP refresh - page builder.png"/>
+            </a>
+        </div>
+        <p>
+            High-fidelity prototype testing confirmed that small merchants had a much-improved experience when starting
+            from an empty canvas or from a template.
+        </p>
+
+
+        <div class="subtitle">Shop Beautiful Redesign</div>
+        <p>
+            To showcase the capabilities of the platform and sell the mobile SDK, the company had an app that needed a
+            redesign. The original version had an outdated look and feel and a lot of technical debt, making it
+            challenging to update with improvements and new features.
+        </p>
+        <p>
+            The redesign goals were to reimagine the explore surroundings experience, improve the image and audio
+            scanning experience, and simplify the one-click purchasing flows for new and returning customers. The app
+            needed to look modern, work smoothly, and be white-labelable to achieve business goals.
+        </p>
+        <p>
+            The redesign effort involved a significant focus on visual design and transitions to achieve a modern and
+            smooth user experience. The final deliverables included a solid design system that enables customization and
+            extensibility.
+        </p>
+
+        <div class="subtitle">Instant Checkout MVP</div>
+        <p>
+            Selling the mobile SDK can be a challenging task, which is why the company decided to introduce a web
+            version of the Instant Buy feature to help ease the process. Despite having a tight deadline of just one
+            week before the engineers began coding, the team followed a rigorous process and successfully aligned a
+            cross-functional team. Sketches were used as a tool to facilitate thorough conversations and shape the
+            architecture of the solution.
+        </p>
+        <p>
+            During this project, the visual design was guided by the chosen UI code components library, and the team
+            aimed to deliver a product that was visually appealing, user-friendly, and easy to implement. Despite the
+            high-pressure situation, the team was able to deliver a responsive webpage design that met all of these
+            requirements.
+        </p>
+
+        <div class="subtitle">Instant Checkout</div>
+        <p>
+            During the development of the MVP version of the web Instant Checkout, we also worked on improving the
+            design of the feature. Our goal was to create a more visually appealing UI and enhance the layout for larger
+            screens.
+        </p>
+        <p>
+            To achieve this, we decided to change the approach from using dialogs for specific tasks such as adding a
+            delivery address or a card, to using expanding and collapsing in-page sections. This allowed the user to
+            remain focused on the subtask while still being able to stay within the visual context of the product page,
+            creating a more seamless and simple user experience. Overall, we aimed to prioritize perceived simplicity in
+            order to optimize the instant checkout experience.
         </p>
 
         <div id="disqus_thread"></div>
@@ -348,6 +450,16 @@
                         s.setAttribute('data-timestamp', +new Date());
                         (d.head || d.body).appendChild(s);
                     })();
+
+
+
+
+
+
+
+
+
+
 
         </script>
 
