Added SB2 pictures to Rezolve

--- a/rezolve.html
+++ b/rezolve.html
@@ -403,6 +403,44 @@
             extensibility.
         </p>
 
+        <div class="gallery">
+            <a data-fancybox="sb2" class="needsBorder"
+               data-caption="To be added"
+               href="img/rezolve/SB2 - Home Page.png">
+                <img class="gallery3 left_image with_border" src="img/rezolve/SB2 - Home Page.png"/>
+            </a>
+
+            <a data-fancybox="sb2" class="needsBorder"
+               data-caption="To be added"
+               href="img/rezolve/SB2 - Map view.png">
+                <img class="gallery3 center_image with_border" src="img/rezolve/SB2 - Map view.png"/>
+            </a>
+
+            <a data-fancybox="sb2" class="needsBorder"
+               data-caption="To be added"
+               href="img/rezolve/SB2 - Product List.png">
+                <img class="gallery3 right_image with_border" src="img/rezolve/SB2 - Product List.png"/>
+            </a>
+
+            <a data-fancybox="sb2" class="needsBorder"
+               data-caption="To be added"
+               href="img/rezolve/SB2 - PDP.png">
+                <img class="gallery3 left_image with_border" src="img/rezolve/SB2 - PDP.png"/>
+            </a>
+
+            <a data-fancybox="sb2" class="needsBorder"
+               data-caption="To be added"
+               href="img/rezolve/SB2 - Error Payment.png">
+                <img class="gallery3 center_image with_border" src="img/rezolve/SB2 - Error Payment.png"/>
+            </a>
+
+            <a data-fancybox="sb2" class="needsBorder"
+               data-caption="To be added"
+               href="img/rezolve/SB2 - Order successful.png">
+                <img class="gallery3 right_image with_border" src="img/rezolve/SB2 - Order successful.png"/>
+            </a>
+        </div>
+
         <div class="subtitle">Instant Checkout MVP</div>
         <p>
             Selling the mobile SDK can be a challenging task, which is why the company decided to introduce a web
