Added IC pictures to Rezolve

--- a/rezolve.html
+++ b/rezolve.html
@@ -456,6 +456,20 @@
             requirements.
         </p>
 
+        <div class="gallery">
+            <a data-fancybox="ic1" class="needsBorder"
+               data-caption="To be added"
+               href="img/rezolve/IC1 - desktop.png">
+                <img class="gallery1 with_border" src="img/rezolve/IC1 - desktop.png"/>
+            </a>
+
+            <a data-fancybox="ic1"
+               data-caption="To be added"
+               href="img/rezolve/IC1 - mobile.png">
+                <img class="gallery1" src="img/rezolve/IC1 - mobile.png"/>
+            </a>
+        </div>
+
         <div class="subtitle">Instant Checkout</div>
         <p>
             During the development of the MVP version of the web Instant Checkout, we also worked on improving the
@@ -469,6 +483,28 @@
             creating a more seamless and simple user experience. Overall, we aimed to prioritize perceived simplicity in
             order to optimize the instant checkout experience.
         </p>
+
+        <div class="gallery">
+
+
+            <a data-fancybox="ic2"
+               data-caption="To be added"
+               href="img/rezolve/IC2 - mobile.png">
+                <img class="gallery1" src="img/rezolve/IC2 - mobile.png"/>
+            </a>
+
+            <a data-fancybox="ic2" class="needsBorder"
+               data-caption="To be added"
+               href="img/rezolve/IC2 - desktop.png">
+                <img class="gallery1 with_border" src="img/rezolve/IC2 - desktop.png"/>
+            </a>
+
+            <a data-fancybox="ic2" class="needsBorder"
+               data-caption="To be added"
+               href="img/rezolve/IC2 - modal.png">
+                <img class="gallery1 with_border" src="img/rezolve/IC2 - modal.png"/>
+            </a>
+        </div>
 
         <div id="disqus_thread"></div>
         <script>
