Rezolve final touches

--- a/projects.html
+++ b/projects.html
@@ -110,9 +110,10 @@
                 <div class="tagline">Mobile e-commerce engagement platform</div>
 
                 <div class="tags">
-                    <span class="tag">WEB</span>
-                    <span class="tag">RESPONSIVENESS</span>
-                    <span class="tag">ENTERPRISE</span>
+                    <span class="tag">RESPONSIVE WEB</span>
+                    <span class="tag">B2B</span>
+                    <span class="tag">MOBILE</span>
+                    <span class="tag">B2C</span>
                     <span class="tag">WIREFRAMING</span>
                     <span class="tag">PROTOTYPING</span>
                     <span class="tag">USER TESTING</span>
@@ -128,7 +129,7 @@
 					</a>
 				</div>
 
-                <p class="first_paragraph">Rezolve is a marketing platform that offers a mobile shopping solution along
+                <p class="first_paragraph">Rezolve is a marketing platform that offers mobile and web shopping solutions along
                     with
                     digital payments and e-marketing products. It allows brands and over 150000 merchants to leverage
                     location
