--- a/rezolve.html
+++ b/rezolve.html
@@ -43,17 +43,6 @@
 				r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
 				a.appendChild(r);
 			})(window,document,'//static.hotjar.com/c/hotjar-','.js?sv=');
-
-
-
-
-
-
-
-
-
-
-
     </script>
 
     <!-- FullStory Tracking Code for http://berdilaovidiu.github.io/portfolio/ -->
@@ -80,18 +69,7 @@
                 if(m[y])m[y]=function(){return g._w[y].apply(this,arguments)};
                 g._v="1.3.0";
             })(window,document,window['_fs_namespace'],'script','user');
-
-
-
-
-
-
-
-
-
-
-
-    </script>
+</script>
 
 </head>
 
@@ -106,16 +84,6 @@
             ga('create', 'UA-65113069-1', 'auto');
             ga('send', 'pageview');
 
-
-
-
-
-
-
-
-
-
-
 </script>
 
 <script type="text/javascript">
@@ -129,23 +97,6 @@
                 });
             });
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 </script>
 
 <div id="menu"></div>
@@ -157,9 +108,10 @@
         <div class="tagline">Mobile e-commerce engagement platform</div>
 
         <div class="tags">
-            <span class="tag">WEB</span>
-            <span class="tag">RESPONSIVENESS</span>
-            <span class="tag">ENTERPRISE</span>
+            <span class="tag">RESPONSIVE WEB</span>
+            <span class="tag">B2B</span>
+            <span class="tag">MOBILE</span>
+            <span class="tag">B2C</span>
             <span class="tag">WIREFRAMING</span>
             <span class="tag">PROTOTYPING</span>
             <span class="tag">USER TESTING</span>
@@ -175,23 +127,21 @@
             </a>
         </div>
 
-        <p class="first_paragraph">Rezolve is a marketing platform that offers a mobile shopping solution along with
+        <p class="first_paragraph">Rezolve is a marketing platform that offers mobile and web shopping solutions along
+            with
             digital payments and e-marketing products. It allows brands and over 150000 merchants to leverage location
             data from geo zones and beacons and to convert visual and audio media into interactive experiences on mobile
             devices.</p>
 
         <div id="team_setup" class="subtitle2">Team setup</div>
-        <p>Rezolve is a totally remote company with people working from all over the world. I work closely with the Head
-            of UX and a visual designer. When needed, we reach out to a couple of design
-            agencies to extend our capabilities. I also work with Product Managers and engineering teams to
-            clarify needs, timelines and get feedback on designs.
+        <p>Rezolve is a completely remote company, with team members located all around the globe. As the Lead Product Designer, I work closely with the Head of UX and our UI Designer. Whenever necessary, we
+            collaborate
+            with external design agencies to expand our capabilities. Additionally, I liaise with Product Managers and
+            engineering teams to ensure a clear understanding of requirements, timelines, and to obtain feedback on
+            design work.
         </p>
 
-        <div id="my_role" class="subtitle2">Role and key achievements</div>
-        <p>I was hired as a Senior UX Designer and the role has gradually gotten more complex. I am involved in most
-            products of the company, I manage a couple of people and I attend and contribute to the product team’s
-            meetings regularly.
-        </p>
+        <div id="my_role" class="subtitle2">Key achievements</div>
 
         <p>My greatest achievements are all the result of teamwork, but there are some areas where I contributed more
             and had the most ownership:
@@ -235,7 +185,6 @@
 
 
         <div class="gallery">
-
             <a data-fancybox="rxp-redesign" class="needsBorder"
                data-caption="To be added"
                href="img/rezolve/Engagements-listing-large.png">
@@ -259,8 +208,6 @@
                href="img/rezolve/Frame 4820.png">
                 <img class="gallery1" src="img/rezolve/Frame 4820.png"/>
             </a>
-
-
         </div>
 
         <p>
@@ -334,7 +281,7 @@
             </a>
         </div>
 
-        <div class="subtitle2">Onboarding</div>
+        <div class="subtitle2">eCommerce onboarding</div>
         <p>
             Before merchants can start selling with Rezolve, they must configure several settings, including business
             details, payment collection, inventory, delivery, physical locations, and more. This process involves
@@ -360,7 +307,7 @@
             well in user testing, with all subjects completing the flow with ease.
         </p>
 
-        <div class="subtitle2">Content creation</div>
+        <div class="subtitle2">Promotional content creation</div>
         <p>
             Small merchants faced difficulties coming up with content that looked good and performed well when faced
             with a black canvas. We collected solid evidence from production data and user testing to convince
@@ -485,8 +432,6 @@
         </p>
 
         <div class="gallery">
-
-
             <a data-fancybox="ic2"
                data-caption="To be added"
                href="img/rezolve/IC2 - mobile.png">
@@ -524,14 +469,6 @@
                         s.setAttribute('data-timestamp', +new Date());
                         (d.head || d.body).appendChild(s);
                     })();
-
-
-
-
-
-
-
-
 
 
 
