--- a/index.html
+++ b/index.html
@@ -1,25 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<link rel="stylesheet" href="style/resets.css"/>
-		<link rel="stylesheet" href="style/customgrid.css"/>
-		<link rel="stylesheet" href="style/global.css"/>
-		<link rel="stylesheet" href="style/layout.css"/>
-		<link rel="stylesheet" href="style/index.css"/>
-		<link rel="stylesheet" href="style/menu.css"/>
+<head>
+    <link rel="stylesheet" href="style/resets.css"/>
+    <link rel="stylesheet" href="style/customgrid.css"/>
+    <link rel="stylesheet" href="style/global.css"/>
+    <link rel="stylesheet" href="style/layout.css"/>
+    <link rel="stylesheet" href="style/index.css"/>
+    <link rel="stylesheet" href="style/menu.css"/>
 
-		<link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'/>
-		<link href='https://fonts.googleapis.com/css?family=Crimson+Text' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800'
+          rel='stylesheet' type='text/css'/>
+    <link href='https://fonts.googleapis.com/css?family=Crimson+Text' rel='stylesheet' type='text/css'>
 
-        <meta name="viewport" content="width=device-width">
-        <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width">
+    <meta charset="utf-8"/>
 
-        <!-- Add jQuery library -->
-        <script type="text/javascript" src="https://code.jquery.com/jquery-latest.min.js"></script>
-        <script type="text/javascript" src="js/menu_utils.js"></script>
+    <!-- Add jQuery library -->
+    <script type="text/javascript" src="https://code.jquery.com/jquery-latest.min.js"></script>
+    <script type="text/javascript" src="js/menu_utils.js"></script>
 
-		<!-- Hotjar Tracking Code for http://berdilaovidiu.github.io/portfolio/ -->
-		<script>
+    <!-- Hotjar Tracking Code for http://berdilaovidiu.github.io/portfolio/ -->
+    <script>
 			(function(h,o,t,j,a,r){
 				h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
 				h._hjSettings={hjid:314578,hjsv:5};
@@ -28,10 +29,12 @@
 				r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
 				a.appendChild(r);
 			})(window,document,'//static.hotjar.com/c/hotjar-','.js?sv=');
-		</script>
 
-		<!-- FullStory Tracking Code for http://berdilaovidiu.github.io/portfolio/ -->
-		<script>
+
+    </script>
+
+    <!-- FullStory Tracking Code for http://berdilaovidiu.github.io/portfolio/ -->
+    <script>
             window['_fs_debug'] = false;
             window['_fs_host'] = 'fullstory.com';
             window['_fs_script'] = 'edge.fullstory.com/s/fs.js';
@@ -56,11 +59,11 @@
             })(window,document,window['_fs_namespace'],'script','user');
     </script>
 
-		<title>Ovidiu Berdila UX Designer</title>
-	</head>
-	<body>
+    <title>Ovidiu Berdila UX Designer</title>
+</head>
+<body>
 
-    <script>
+<script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
             (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
                 m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -68,10 +71,9 @@
 
         ga('create', 'UA-65113069-1', 'auto');
         ga('send', 'pageview');
+</script>
 
-    </script>
-
-    <script>
+<script>
         $(document).ready(function () {
 			$("#menu").load("menu.html", function () {
                         var menuItemId = "#menu_home";
@@ -86,60 +88,64 @@
                     }
             );
         });
-    </script>
+</script>
 
-	<div id="menu"></div>
+<div id="menu"></div>
 
-	<div id="home_panel">
-		<div id="logo_container">
-			<div id="title_location">
-				<span id="title">product designer</span><br>
-				<span id="location">Valencia, Spain</span>
-			</div>
-			<img id="logo_large" src="img/logo.svg"/>
-			<img id="logo_mobile" src="img/logo_mobile.svg"/>
-			<div id="manifesto">I strive to design simple and elegant solutions to complex problems</div>
-		</div>
-		<div id="right_container">
+<div id="home_panel">
+    <div id="logo_container">
+        <div id="title_location">
+            <span id="title">product designer</span><br>
+            <span id="location">Valencia, Spain</span>
+        </div>
+        <img id="logo_large" src="img/logo.svg"/>
+        <img id="logo_mobile" src="img/logo_mobile.svg"/>
+        <div id="manifesto">I strive to design simple and elegant solutions to complex problems</div>
+    </div>
+    <div id="right_container">
 
-			<div id="typogrid">
-				<div id="rows">
-					<span class="row"></span>
-					<span class="row"></span>
-					<span class="row"></span>
-					<span class="row"></span>
-					<span class="row"></span>
-					<span class="row"></span>
-				</div>
-				<div id="columns">
-					<span class="column"></span>
-					<span class="column"></span>
-					<span class="column"></span>
-					<span class="column"></span>
-					<span class="column"></span>
-					<span class="column"></span>
-				</div>
-			</div>
-			<div id="short_description">
+        <div id="typogrid">
+            <div id="rows">
+                <span class="row"></span>
+                <span class="row"></span>
+                <span class="row"></span>
+                <span class="row"></span>
+                <span class="row"></span>
+                <span class="row"></span>
+            </div>
+            <div id="columns">
+                <span class="column"></span>
+                <span class="column"></span>
+                <span class="column"></span>
+                <span class="column"></span>
+                <span class="column"></span>
+                <span class="column"></span>
+            </div>
+        </div>
+        <div id="short_description">
 
-				<p>I am a designer with a strong technical background in software systems and a passion
-					for making technology friendly.
-				</p>
+            <p>As a product designer with a strong technical background in software systems, I am passionate about making
+                technology accessible and user-friendly. My interest in design was sparked during a cognitive
+                engineering seminar I attended in 2011 while working as a front-end developer.
+            </p>
 
-				<p>I picked up the interest in design in 2011, while attending a cognitive engineering seminar hosted by the company I was writing software for at that time.
-					Since then, I have slowly transitioned into a design role, while working on complex and interesting user interfaces in the financial, bio informatics, IoT
-					and real estate industries.
-				</p>
+            <p>
+                Since then, I have
+                gradually transitioned into a design role, gaining experience designing complex user interfaces in a
+                variety of industries, including finance, bioinformatics, IoT, real estate, gig economy, education and
+                eCommerce.
+            </p>
 
-				<p>Personally, I envision a future where technology enriches people's lives, by simplifying
-					interactions, strengthening social bonds and communities and guiding people to focus on things that truly matter.
-					As an old man, I hope to proudly look back thinking I had a part in all this.
-				</p>
+            <p>My personal vision is for technology to enrich people's lives by simplifying interactions, strengthening
+                social bonds and communities, and guiding people to focus on what truly matters. As I look towards the
+                future, I hope to continue contributing to this vision and take pride in the part I played in making it
+                a reality.
+            </p>
 
-			</div>
+        </div>
 
-		</div>
-		<span id="visual_anchor"/>
-	</div>
-	</body>
+    </div>
+    <span id="visual_anchor"/>
+</div>
+</body>
 </html>
